// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImagePollCovered should render dislike button when passing isOneImageVote=[true] and dislike=[true] 1`] = `
<div
  className="flex justify-end"
>
  <div
    className="flex"
  >
    <div
      className="group mr-4"
    >
      <button
        className="btn btn-like btn-large btn-rounded"
        disabled={false}
        id="option_1"
        onClick={[Function]}
        type="button"
      >
        <span>
          <svg
            className="fill-error stroke-current stroke-1 text-white group-hover:fill-white"
            data-file-name="SvgFilledDislike"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`ImagePollCovered should render heart button when passing isOneImageVote=[false] 1`] = `
<div
  className="flex justify-end"
>
  <div
    className="group"
  >
    <button
      className="btn btn-like btn-large btn-rounded"
      disabled={false}
      id="option_1"
      onClick={[Function]}
      type="button"
    >
      <span>
        <svg
          className="fill-primary stroke-current stroke-2 text-white group-hover:fill-white"
          data-file-name="SvgFilledHeart"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`ImagePollCovered should render like button when passing isOneImageVote=[true] and like=[true] 1`] = `
<div
  className="flex justify-end"
>
  <div
    className="flex"
  >
    <div
      className="group"
    >
      <button
        className="btn btn-like btn-large btn-rounded"
        disabled={false}
        id="option_1"
        onClick={[Function]}
        type="button"
      >
        <span>
          <svg
            className="fill-primary stroke-current stroke-1 text-white group-hover:fill-white"
            data-file-name="SvgFilledLike"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;
